--- a/notebooks/crawl_data_vcb.ipynb
+++ b/notebooks/crawl_data_vcb.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Crawl từ Vietcombank**"
+    "# **Crawl từ Vietcombank - EUR/VND**"
    ]
   },
   {
@@ -17,6 +17,116 @@
      "output_type": "stream",
      "text": [
       "Crawling EUR exchange rates from Vietcombank...\n",
+      "📅 Đã crawl xong dữ liệu tháng 04/2020\n",
+      "📅 Đã crawl xong dữ liệu tháng 05/2020\n",
+      "📅 Đã crawl xong dữ liệu tháng 06/2020\n",
+      "📅 Đã crawl xong dữ liệu tháng 07/2020\n",
+      "📅 Đã crawl xong dữ liệu tháng 08/2020\n",
+      "📅 Đã crawl xong dữ liệu tháng 09/2020\n",
+      "📅 Đã crawl xong dữ liệu tháng 10/2020\n",
+      "📅 Đã crawl xong dữ liệu tháng 11/2020\n",
+      "📅 Đã crawl xong dữ liệu tháng 12/2021\n",
+      "📅 Đã crawl xong dữ liệu tháng 01/2021\n",
+      "📅 Đã crawl xong dữ liệu tháng 02/2021\n",
+      "📅 Đã crawl xong dữ liệu tháng 03/2021\n",
+      "📅 Đã crawl xong dữ liệu tháng 04/2021\n",
+      "📅 Đã crawl xong dữ liệu tháng 05/2021\n",
+      "📅 Đã crawl xong dữ liệu tháng 06/2021\n",
+      "📅 Đã crawl xong dữ liệu tháng 07/2021\n",
+      "📅 Đã crawl xong dữ liệu tháng 08/2021\n",
+      "📅 Đã crawl xong dữ liệu tháng 09/2021\n",
+      "📅 Đã crawl xong dữ liệu tháng 10/2021\n",
+      "📅 Đã crawl xong dữ liệu tháng 11/2021\n",
+      "📅 Đã crawl xong dữ liệu tháng 12/2022\n",
+      "📅 Đã crawl xong dữ liệu tháng 01/2022\n",
+      "📅 Đã crawl xong dữ liệu tháng 02/2022\n",
+      "📅 Đã crawl xong dữ liệu tháng 03/2022\n",
+      "📅 Đã crawl xong dữ liệu tháng 04/2022\n",
+      "📅 Đã crawl xong dữ liệu tháng 05/2022\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import pandas as pd\n",
+    "from datetime import datetime, timedelta\n",
+    "from tqdm import tqdm\n",
+    "import time\n",
+    "\n",
+    "def get_eur_rate(date_str):\n",
+    "    url = f\"https://www.vietcombank.com.vn/api/exchangerates?date={date_str}\"\n",
+    "    try:\n",
+    "        response = requests.get(url)\n",
+    "        if response.status_code == 200:\n",
+    "            data = response.json()\n",
+    "            if \"Data\" in data:\n",
+    "                for item in data[\"Data\"]:\n",
+    "                    if item[\"currencyCode\"] == \"EUR\":\n",
+    "                        return {\n",
+    "                            \"Date\": date_str,\n",
+    "                            \"Buy\": float(item[\"cash\"].replace(\",\", \"\")),\n",
+    "                            \"Transfer\": float(item[\"transfer\"].replace(\",\", \"\")),\n",
+    "                            \"Sell\": float(item[\"sell\"].replace(\",\", \"\"))\n",
+    "                        }\n",
+    "            else:\n",
+    "                print(f\"[{date_str}] ❌ Không tìm thấy key 'Data'\")\n",
+    "        else:\n",
+    "            print(f\"[{date_str}] ❌ HTTP Error: {response.status_code}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"[{date_str}] ❌ Error: {e}\")\n",
+    "    return None\n",
+    "\n",
+    "# Khoảng thời gian cần crawl\n",
+    "start_date = datetime(2020, 4, 1)\n",
+    "end_date = datetime(2025, 4, 11)\n",
+    "delta = timedelta(days=1)\n",
+    "\n",
+    "results = []\n",
+    "\n",
+    "print(\"Crawling EUR exchange rates from Vietcombank...\")\n",
+    "\n",
+    "current_date = start_date\n",
+    "previous_month = None\n",
+    "\n",
+    "while current_date <= end_date:\n",
+    "    date_str = current_date.strftime(\"%Y-%m-%d\")\n",
+    "    result = get_eur_rate(date_str)\n",
+    "    if result:\n",
+    "        results.append(result)\n",
+    "\n",
+    "    # Kiểm tra nếu đã sang tháng mới\n",
+    "    if previous_month is None:\n",
+    "        previous_month = current_date.month\n",
+    "    elif current_date.month != previous_month:\n",
+    "        print(f\"📅 Đã crawl xong dữ liệu tháng {previous_month:02d}/{current_date.year}\")\n",
+    "        previous_month = current_date.month\n",
+    "\n",
+    "    current_date += delta\n",
+    "    time.sleep(0.3)  # nghỉ để tránh bị chặn IP\n",
+    "\n",
+    "# Tạo DataFrame và lưu\n",
+    "df = pd.DataFrame(results)\n",
+    "df.to_csv(\"../data/raw/EUR_VND_Exchange_Rate.csv\", index=False)\n",
+    "print(\"✅ Done! Saved to ../data/raw/EUR_VND_Exchange_Rate.csv.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **USD/VND**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Crawling USD exchange rates from Vietcombank...\n",
       "📅 Đã crawl xong dữ liệu tháng 04/2020\n",
       "📅 Đã crawl xong dữ liệu tháng 05/2020\n",
       "📅 Đã crawl xong dữ liệu tháng 06/2020\n",
@@ -77,7 +187,7 @@
       "📅 Đã crawl xong dữ liệu tháng 01/2025\n",
       "📅 Đã crawl xong dữ liệu tháng 02/2025\n",
       "📅 Đã crawl xong dữ liệu tháng 03/2025\n",
-      "✅ Done! Saved to ../data/raw/EUR_VND_Exchange_Rate.csv.csv\n"
+      "✅ Done! Saved to ../data/raw/USD_VND_Exchange_Rate.csv.csv\n"
      ]
     }
    ],
@@ -88,7 +198,7 @@
     "from tqdm import tqdm\n",
     "import time\n",
     "\n",
-    "def get_eur_rate(date_str):\n",
+    "def get_usd_rate(date_str):\n",
     "    url = f\"https://www.vietcombank.com.vn/api/exchangerates?date={date_str}\"\n",
     "    try:\n",
     "        response = requests.get(url)\n",
@@ -96,7 +206,7 @@
     "            data = response.json()\n",
     "            if \"Data\" in data:\n",
     "                for item in data[\"Data\"]:\n",
-    "                    if item[\"currencyCode\"] == \"EUR\":\n",
+    "                    if item[\"currencyCode\"] == \"USD\":\n",
     "                        return {\n",
     "                            \"Date\": date_str,\n",
     "                            \"Buy\": float(item[\"cash\"].replace(\",\", \"\")),\n",
@@ -113,19 +223,19 @@
     "\n",
     "# Khoảng thời gian cần crawl\n",
     "start_date = datetime(2020, 4, 1)\n",
-    "end_date = datetime(2025, 4, 1)\n",
+    "end_date = datetime(2025, 4, 11)\n",
     "delta = timedelta(days=1)\n",
     "\n",
     "results = []\n",
     "\n",
-    "print(\"Crawling EUR exchange rates from Vietcombank...\")\n",
+    "print(\"Crawling USD exchange rates from Vietcombank...\")\n",
     "\n",
     "current_date = start_date\n",
     "previous_month = None\n",
     "\n",
     "while current_date <= end_date:\n",
     "    date_str = current_date.strftime(\"%Y-%m-%d\")\n",
-    "    result = get_eur_rate(date_str)\n",
+    "    result = get_usd_rate(date_str)\n",
     "    if result:\n",
     "        results.append(result)\n",
     "\n",
@@ -141,8 +251,8 @@
     "\n",
     "# Tạo DataFrame và lưu\n",
     "df = pd.DataFrame(results)\n",
-    "df.to_csv(\"../data/raw/EUR_VND_Exchange_Rate.csv\", index=False)\n",
-    "print(\"✅ Done! Saved to ../data/raw/EUR_VND_Exchange_Rate.csv.csv\")\n"
+    "df.to_csv(\"../data/raw/USD_VND_Exchange_Rate.csv\", index=False)\n",
+    "print(\"✅ Done! Saved to ../data/raw/USD_VND_Exchange_Rate.csv.csv\")\n"
    ]
   }
  ],
